--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^25.0.8",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
+    "esbuild": "0.27.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
