clean and optimal current version

--- a/services/integration/appsettings.json
+++ b/services/integration/appsettings.json
@@ -10,7 +10,7 @@
   },
   "GitHub": {
     "Token": "",
-    "ApiBaseUrl": "https://api.github.com"
+    "ApiBaseUrl": "https://api.github.com/"
   },
   "Jira": {
     "SiteUrl": "",
