fix toan bo cau truc du an, them redis va WebSockets Real-time(signalR)

--- a/services/integration/appsettings.json
+++ b/services/integration/appsettings.json
@@ -17,13 +17,13 @@
     "Email": "",
     "ApiToken": ""
   },
+  "Redis": {
+    "ConnectionString": "localhost:6379,abortConnect=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Hosting": "Information",
-      "Microsoft.AspNetCore.Routing.EndpointMiddleware": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
