--- a/services/integration/appsettings.Development.json
+++ b/services/integration/appsettings.Development.json
@@ -4,11 +4,7 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning",
-      "Microsoft.EntityFrameworkCore": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
-      "JiraGithubExport": "Information"
+      "System.Net.Http.HttpClient": "Warning"
     }
   }
 }
