--- a/services/integration/appsettings.Development.json
+++ b/services/integration/appsettings.Development.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information",
       "System.Net.Http.HttpClient": "Warning"
     }
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
   }
 }
