--- a/services/integration/appsettings.json
+++ b/services/integration/appsettings.json
@@ -26,5 +26,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
+  }
 }
