--- a/services/jira-service/JiraService.csproj
+++ b/services/jira-service/JiraService.csproj
@@ -13,6 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.json" CopyToPublishDirectory="Never" />
+    <Content Update="appsettings.Development.json" CopyToPublishDirectory="Never" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\packages\shared\Shared.csproj" />
   </ItemGroup>
 
